--- a/index.html
+++ b/index.html
@@ -18,19 +18,32 @@
   </head>
 
   <body>
+    <!-- <div class="header-container"> -->
+    <header>
+      <h1>Fun Bus</h1>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+      </nav>
+    </header>
+    <!-- </div> -->
     <div class="container home">
-      <div class="header-container">
-        <header>
-          <h1>Fun Bus</h1>
-          <nav>
-            <a href="#">Home</a>
-            <a href="#">About Us</a>
-            <a href="#">Blog</a>
-            <a href="#">Contact</a>
-          </nav>
-        </header>
-      </div>
       <section class="content-section">
+        <div class="">
+          <img src="img/fun-bus.jpg" class="fun-bus-img" alt="" />
+        </div>
+        <div class="intro">
+          <h2>Welcome To Fun Bus</h2>
+          <p>
+            Traveling expedition modern, clean web design blogger clean website
+            theme website modern. Design Pretty design, travelblogger adventure
+            WordPress wanderlust theme blogger website expedition theme
+            travelblogger. Adventure fun traveler pretty design website
+            expedition.
+          </p>
+        </div>
         <div class="text-content">
           <h2>Let's Go!</h2>
           <p>
