completed the rest of the project

--- a/index.html
+++ b/index.html
@@ -98,7 +98,11 @@
             WordPress Travel colorful webdesign. Traveler blogger website design
             expedition clean excursion traveling.
           </p>
-          <div class="btn">Sign Me Up!</div>
+          <div class="btn">
+            <button>
+              Sign Me Up!
+            </button>
+          </div>
         </div>
         <div class="destination">
           <h4>Mountain Excursion</h4>
@@ -107,7 +111,11 @@
             WordPress Travel colorful webdesign. Traveler blogger website design
             expedition clean excursion traveling.
           </p>
-          <div class="btn">Sign Me Up!</div>
+          <div class="btn">
+            <button>
+              Sign Me Up!
+            </button>
+          </div>
         </div>
         <div class="destination">
           <h4>Island Getaway</h4>
@@ -116,7 +124,11 @@
             WordPress Travel colorful webdesign. Traveler blogger website design
             expedition clean excursion traveling.
           </p>
-          <div class="btn">Sign Me Up!</div>
+          <div class="btn">
+            <button>
+              Sign Me Up!
+            </button>
+          </div>
         </div>
       </section>
     </div>
